--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,9 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://hanxiatu.com	
 root: /
-permalink: :year/:month/:day/:title/
-permalink_defaults:
+permalink: post/:title.html
 
 # Directory
 source_dir: source
