add related link for geektutu.com

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ reward:
 related_links:
 - link: https://github.com/hanxiatu-fc
   img: img/related_links/github.png
+- link: https://geektutu.com
+  img: img/related_links/geektutu.png
 - link: mailto:hanxiatu@gmail.com?subject=From Hanxiatu's Blog
   img: img/related_links/email.png
 
